style.css
* {
  margin: 0;
  font-family: 'Roboto', sans-serif;
  user-select: none;
}

body {
  background-color: #1f2937;
}

header {
  display: flex;
  justify-content: space-between;
  padding-left: 25px;
  padding-right: 25px;
  background-color: #1f2937;
  align-items: center;
  padding-top: 1rem;
  padding-bottom: 1rem;
  gap: 1rem;
}

a {
  color: #e5e7eb;
  text-decoration: none;
  margin-left: 1rem;
  margin-right: 1rem;
}

a:hover {
  color: white;
  border-bottom: 1px solid white;
}

a:active {
  opacity: 50%;
}

.hero {
  display: flex;
}

.hero > p {
  color: #f9faf8;
  font-weight: bold;
  font-size: 36px;
  transition: 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
}

.hover {
  color: rgb(255, 255, 255);
  transform: translate(0, -10px);
  opacity: 1;
}

.halfhover {
  transform: translate(0, -4px);
}

.section {
  min-height: 600px;
  display: flex;
}

.blue {
  background-color: #1f2937;
}

.white {
  background-color: white;
}

.grey {
  background-color: #e5e7eb;
}

.first {
  justify-content: space-around;
  padding-left: 15%;
  padding-right: 15%;
  align-items: center;
}

h1 {
  font-size: 48px;
  color: #f9faf8;
}

p {
  font-size: 18px;
  color: #e5e7eb;
  width: 69%;
  opacity: 80%;
}

button {
  background-color: #3882f6;
  border-radius: 10px;
  padding-top: 0.3rem;
  padding-bottom: 0.3rem;
  width: 20%;
  min-width: 100px;
  color: white;
  font-size: 18px;
  font-weight: bold;
  border: none;
  cursor: pointer;
}

button:hover {
  opacity: 90%;
}

button:active {
  opacity: 50%;
}

#img {
  width: 600px;
  height: 300px;
  background-color: #e5e7eb;
  display: flex;
  text-align: center;
  justify-content: center;
  align-items: center;
}

#topLeft {
  height: 100%;
  justify-content: center;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

footer {
  background-color: #1f2937;
  display: flex;
  justify-content: center;
  align-items: center;
  color: white;
  font-size: 18px;
  padding-top: 30px;
  padding-bottom: 30px;
}

.second {
  padding-top: 1rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 2rem;
}

.informationHeader {
  font-size: 48px;
  font-weight: bold;
  color: #1f2937;
}

.informationRow {
  display: flex;
}

.informationItem {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 10px;
  width: 250px;
  margin-top: 2rem;
  margin-bottom: 2rem;
}

.infoPic {
  height: 200px;
  width: 200px;
  border: 4px solid rgb(123, 123, 236);
  border-radius: 20px;
  transition: 0.2s ease-in-out;
}

.infoPic:hover {
  border: 4px dotted rgb(121, 121, 255);
  cursor: pointer;
  transform: scale(1.1);
}

.infoSubtext {
  color: #1f2937;
  text-align: center;
}

.third {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding-left: 15%;
  padding-right: 15%;
}

h4 {
  font-size: 36px;
  font-weight: 400;
  font-style: italic;
  color: #1f2937;
}

h3 {
  align-self: flex-end;
  font-size: 25px;
}

.fourth {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

#callToActionContainer {
  background-color: #3882f6;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding-top: 5rem;
  border-radius: 10px;
  padding-bottom: 5rem;
  padding-left: 5%;
  padding-right: 5%;
}

#callToActionText {
  color: white;
}

#callToActionSubtitle {
  opacity: 80%;
  font-weight: 300;
}

#callToActionBtn {
  border: 2px solid white;
  width: 150px;
  cursor: pointer;
  margin: 1rem;
}

#callToActionBtn:hover {
  background-color: white;
  color: #3882f6;
}

/* mobile media query */

@media (max-width: 768px) {
  header {
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .hero {
    text-align: center;
  }

  .section {
    height: 100%;
  }

  .first {
    flex-direction: column;
    align-items: center;
  }

  #img {
    width: 400px;
    height: 220px;
  }

  p {
    width: 100%;
  }

  .informationHeader {
    font-size: 36px;
  }

  .informationRow {
    flex-direction: column;
  }

  .informationItem {
    width: 100%;
  }

  .fourth {
    flex-direction: column;
  }

  #callToActionContainer {
    width: 80%;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }
}

/* tablet media query */

@media (min-width: 768px) and (max-width: 1024px) {
  header {
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .hero {
    text-align: center;
  }

  .section {
    height: 100%;
  }

  .first {
    flex-direction: column;
    align-items: center;
  }

  #img {
    width: 400px;
    height: 220px;
  }

  p {
    width: 100%;
  }

  .informationHeader {
    font-size: 36px;
  }

  .informationRow {
    flex-direction: column;
  }

  .informationItem {
    width: 100%;
  }

  .fourth {
    flex-direction: column;
  }

  #callToActionContainer {
    width: 80%;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }
}

/* desktop media query */

